Reformat API
